feat: Add new class UserBooks
