# project_library_api/app.py
@@ -1,7 +1,7 @@
 from flask import Flask
 from flask_cors import CORS
 from project_library_api import config
-from project_library_api.routes import auth, register, books
+from project_library_api.routes import auth, register, books, my_books
 from project_library_api import db
 
 app = Flask(__name__)
@@ -17,3 +17,4 @@ CORS(app)
 app.register_blueprint(auth.actions)
 app.register_blueprint(register.actions)
 app.register_blueprint(books.actions)
+app.register_blueprint(my_books.actions)
